--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -59,8 +59,8 @@ h1 {
 }
 
 p {
-  width: 35em;
   text-align: center;
+
 }
 
 a {
@@ -102,8 +102,35 @@ a {
 .card,
 .back,
 .front {
-  width: 10vw;
-  height: 10vw;
+  width: 150px;
+  height: 150px;
+}
+
+@media (max-width: 1024px) {
+  .card,
+  .back,
+  .front {
+    width: 130px;
+    height: 130px;
+  }
+}
+
+@media (max-width: 768px) {
+  .card,
+  .back,
+  .front {
+    width: 105px;
+    height: 105px;
+  }
+}
+
+@media (max-width: 480px) {
+  .card,
+  .back,
+  .front {
+    width: 85px;
+    height: 85px;
+  }
 }
 
 .back,
