--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -42,6 +42,13 @@ button {
   margin-bottom: 30px;
 }
 
+h2 {
+  text-align: center;
+  background-color: #FAB942;
+  padding: 10px 10px;
+  border: solid 3px #e75a10;
+}
+
 table {
   color: white;
   font-size: 1em;
